# amgy-gpt

./: .gitignore  CHANGELOG.md  README.md  amgy-gpt.cabal  app.py  llm_interaction.py  requirements.txt
app/: LLM.hs  Main.hs
static/: chat.css  chat.js
templates/: chat.html  index.html
